<resources>
    <string name="app_name">AttendanceCheck</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="checkList">Check List</string>
    <string name="qr">QR</string>
    <string name="history">History</string>
    <string name="menu">Menu</string>
    <string name="capture">Capture</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="logout">Logout</string>
    <string name="test">Test</string>
    <string name="current_courses">Current courses</string>
    <string name="todo">TODO</string>
    <string name="lesson_name">Lesson Name</string>
    <string name="time_here">Time here</string>
    <string name="lessons">Lessons</string>
    <string name="finish_classes">Finish Classes</string>
</resources>