<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_iconMenu"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/checkList_iconMenu"
        android:icon="@drawable/ic_baseline_checklist_24"
        android:title="@string/checkList" />
    <item
        android:id="@+id/qr_iconMenu"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        android:title="@string/qr" />

    <item
        android:id="@+id/history_iconMenu"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history" />

    <item
        android:id="@+id/menu_iconMenu"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/menu" />
</menu>